--- a/package.json
+++ b/package.json
@@ -46,11 +46,15 @@
     }
   },
   "jest": {
+    "globals": {
+      "window": {}
+    },
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
     "setupFiles": [
-      "core-js"
+      "core-js",
+      "jest-localstorage-mock"
     ],
     "testEnvironment": "node",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
@@ -97,8 +101,9 @@
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
-    "jest": "^23.6.0",
+    "jest": "26.0.0",
     "jest-config": "^23.6.0",
+    "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
